# imlog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
include/: level.hpp  log.hpp  log_sink.hpp  message.hpp
shaders/: shader.vert  vert.spv
src/: main.cpp
